--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         </li>
       </ul>
     </nav>
-    <script src="./src/app.js"></script>
+    <div class="bg-green-500 text-white p-4 text-center">
+      TAILWIND EST ACTIF ✅
+    </div>
+    <div id="test-opacity" class="bg-red-500 bg-opacity-50 w-32 h-10"></div>
+    <script type="module" src="./src/app.js"></script>
   </body>
 </html>
