--- a/weapons.html
+++ b/weapons.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./dist/output.css" rel="stylesheet" />
     <title>Valex Weapon</title>
   </head>
   <body>
-    <script src="./src/weapon.js"></script>
+    <script type="module" src="./src/weapon.js"></script>
   </body>
 </html>
