--- a/maps.html
+++ b/maps.html
@@ -31,10 +31,7 @@
       </nav>
     </header>
     <main>
-      <section
-        id="maps-container"
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 p-4"
-      ></section>
+      <section id="maps-container" class="gp-6 space-y-16"></section>
     </main>
     <script type="module" src="./src/map.js"></script>
     <div
