ajout page armes et relation entre armes et les skins d'armes

--- a/map_view.html
+++ b/map_view.html
@@ -45,6 +45,15 @@
           { game: { x: -575, y: -450 }, pixel: { x: 878, y: 1710 } },
           { game: { x: 8900, y: 3525 }, pixel: { x: 1174, y: 289 } },
         ],
+        "7eaecc1b-4337-bbf6-6ab9-04b8f06b3319": [
+          // Ascent :
+          // a wine : 995px 142px <=> "Wine", location: { x: 7358.7407, y: -4689.2705 }
+          { game: { x: 7358.7407, y: -4689.2705 }, pixel: { x: 995, y: 142 } },
+          // defender spawn : 130px 799px <=> "Spawn", location: { x: 1995.2354, y: -9744.923 }
+          { game: { x: 1995.2354, y: -9744.923 }, pixel: { x: 130, y: 799 } },
+          // boat house : 517px 1809px <=> "Boat House", location: { x: -4484.774, y: -7763.3584 }
+          { game: { x: -4484.774, y: -7763.3584 }, pixel: { x: 517, y: 1809 } },
+        ],
 
         // Tu ajoutes d'autres maps ici au fur et à mesure (UUID : [ ...3 points... ])
       };
