ajout page armes et relation entre armes et les skins d'armes 2

--- a/maps.html
+++ b/maps.html
@@ -33,7 +33,7 @@
     <main>
       <section id="maps-container" class="gp-6 space-y-16"></section>
     </main>
-    <script type="module" src="./src/map.compo.js"></script>
+    <script type="module" src="./src/map.js"></script>
     <div
       id="map-modal"
       class="fixed inset-0 z-50 bg-black bg-opacity-50 flex items-center justify-center hidden"
