--- a/weapon_view.html
+++ b/weapon_view.html
@@ -76,7 +76,10 @@
         </button>
 
         <div id="skin-modal-content" class="text-center">
-          <div id="skin-modal-container" class="mt-4 overflow-hidden"></div>
+          <div
+            id="skin-modal-container"
+            class="mt-4 h-full flex items-center justify-center overflow-hidden"
+          ></div>
         </div>
       </div>
     </div>
