--- a/test.html
+++ b/test.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Map Ascent - Callouts avec Tailwind</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./dist/output.css" rel="stylesheet" />
+    <title>Test Background Tailwind</title>
   </head>
-  <body class="bg-zinc-900 text-white font-sans text-center p-8">
-    <h1 class="text-2xl font-bold mb-6">Ascent - Callouts Responsive</h1>
-
-    <div id="mapContainer" class="relative w-full max-w-[1024px] mx-auto">
-      <img
-        id="mapImage"
-        src="displayicon.png"
-        class="w-full h-auto"
-        alt="Ascent Minimap"
-      />
-    </div>
-
-    <script src="script.js"></script>
+  <body class="bg-valex bg-cover bg-center bg-no-repeat bg-fixed min-h-screen">
+    <h1 class="text-white text-4xl text-center pt-40 font-bold">
+      ✅ Tailwind background working
+    </h1>
   </body>
 </html>
