ajout video pour les skins en fonction des variantes ainsi que debut style page d'acceuil 3

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="./dist/output.css" rel="stylesheet" />
     <title>Valex Home</title>
   </head>
-  <body class="bg-gray-900 text-white min-h-screen">
+  <body class="bg-valex bg-cover bg-center text-white min-h-screen">
     <header class="p-6">
       <h1 class="text-4xl font-extrabold text-red-500 text-center">
         Welcome to Valex
@@ -21,26 +21,20 @@
         <a
           id="agent-content"
           href="agents.html"
-          class="relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
-        >
-          <!-- contenu JS ici -->
-        </a>
+          class="group relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
+        ></a>
 
         <a
           id="map-content"
           href="maps.html"
-          class="relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
-        >
-          <!-- contenu JS ici -->
-        </a>
+          class="group relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
+        ></a>
 
         <a
           id="weapon-content"
           href="weapons.html"
-          class="relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
-        >
-          <!-- contenu JS ici -->
-        </a>
+          class="group relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
+        ></a>
       </section>
     </main>
 
