--- a/weapon_view.html
+++ b/weapon_view.html
@@ -6,7 +6,7 @@
     <link href="./dist/output.css" rel="stylesheet" />
     <title>Weapon Viewer</title>
   </head>
-  <body>
+  <body class="bg-valex bg-cover bg-center text-white min-h-screen">
     <header class="p-4">
       <div class="flex justify-between items-center mb-2">
         <h1 class="text-3xl font-bold text-red-500">Skin page</h1>
@@ -40,7 +40,7 @@
     <main>
       <div class="p-4">
         <label for="tier-filter" class="mr-2 font-semibold"
-          >Filtrer par tier :</label
+          >Filter by tier :</label
         >
         <select id="tier-filter" class="border rounded px-2 py-1">
           <option value="">Tous</option>
