--- a/agents.html
+++ b/agents.html
@@ -7,7 +7,18 @@
     <title>Valex Agents</title>
   </head>
 
-  <body class="p-4">
+  <body class="bg-valex bg-cover bg-center text-white min-h-screen">
+    <!-- 🔄 Loader -->
+    <div
+      id="loader"
+      class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50"
+    >
+      <div
+        class="animate-spin rounded-full h-16 w-16 border-4 border-white border-t-transparent"
+      ></div>
+    </div>
+
+    <!-- 🧠 Header -->
     <header>
       <h1 class="text-3xl font-bold text-red-500">Welcome to the agent page</h1>
       <nav>
@@ -28,22 +39,26 @@
         </ul>
       </nav>
     </header>
+
+    <!-- 🔍 Filters -->
     <main>
       <div id="filters" class="mb-6">
-        <label for="role-filter" class="mr-2 font-semibold"
-          >Filtrer par rôle :</label
+        <label for="role-filter" class="mr-2 font-semibold text-white"
+          >Filter by role:</label
         >
-        <select id="role-filter" class="border px-2 py-1 rounded">
-          <option value="All">Tous</option>
+        <select id="role-filter" class="border px-2 py-1 rounded text-black">
+          <option value="All">All</option>
         </select>
       </div>
 
+      <!-- 🧩 Cards -->
       <section
         id="agents-container"
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 p-4"
+        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 p-4"
       ></section>
     </main>
-    <script type="module" src="./src/agent.js"></script>
+
+    <!-- 🔲 Modal -->
     <div
       id="agent-modal"
       class="fixed inset-0 z-50 bg-black bg-opacity-50 flex items-center justify-center hidden"
@@ -58,9 +73,11 @@
         >
           &times;
         </button>
-
         <div id="modal-content" class="text-center"></div>
       </div>
     </div>
+
+    <!-- ⚙️ Script -->
+    <script type="module" src="./src/agent.js"></script>
   </body>
 </html>
