--- a/weapons.html
+++ b/weapons.html
@@ -7,7 +7,7 @@
     <title>Valex Weapons</title>
   </head>
 
-  <body class="p-4">
+  <body class="bg-valex bg-cover bg-center text-white min-h-screen">
     <header>
       <h1 class="text-3xl font-bold text-red-500">
         Welcome to the Weapon page
@@ -54,7 +54,7 @@
 
       <section
         id="weapons-container"
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 p-4"
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 px-4 mx-auto max-w-screen-xl place-items-center"
       ></section>
     </main>
 
