--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-valex bg-cover bg-center text-white min-h-screen">
     <header class="p-6">
-      <h1 class="text-4xl font-extrabold text-red-500 text-center">
+      <h1 class="text-3xl sm:text-4xl font-extrabold text-red-500 text-center">
         Welcome to Valex
       </h1>
     </header>
@@ -16,24 +16,24 @@
     <main>
       <section
         id="valex-content"
-        class="w-full flex flex-wrap justify-center gap-8 px-8 py-12"
+        class="w-full flex flex-wrap justify-center gap-6 sm:gap-8 px-4 sm:px-8 py-10 sm:py-12"
       >
         <a
           id="agent-content"
           href="agents.html"
-          class="group relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
+          class="group relative w-full max-w-[400px] h-[220px] sm:h-[250px] md:h-[300px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
         ></a>
 
         <a
           id="map-content"
           href="maps.html"
-          class="group relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
+          class="group relative w-full max-w-[400px] h-[220px] sm:h-[250px] md:h-[300px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
         ></a>
 
         <a
           id="weapon-content"
           href="weapons.html"
-          class="group relative w-[400px] h-[250px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
+          class="group relative w-full max-w-[400px] h-[220px] sm:h-[250px] md:h-[300px] rounded-xl overflow-hidden shadow-xl bg-cover bg-center flex items-center justify-center text-white"
         ></a>
       </section>
     </main>
