ajout selection map

--- a/agents.html
+++ b/agents.html
@@ -42,6 +42,16 @@
 
     <!-- 🔍 Filters -->
     <main class="px-4">
+      <section id="favorites-section" class="mb-8 hidden">
+        <h2 class="text-2xl font-bold text-yellow-400 mb-4">
+          ⭐ Favorite Agents
+        </h2>
+        <div
+          id="favorites-container"
+          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-items-center"
+        ></div>
+      </section>
+
       <div id="filters" class="mb-6 text-center">
         <label for="role-filter" class="mr-2 font-semibold text-white"
           >Filter by role:</label
