--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <h1 class="text-3xl sm:text-4xl font-extrabold text-red-500 text-center">
         Welcome to Valex
       </h1>
+      <div
+        id="lang-switcher"
+        class="flex flex-wrap justify-center gap-2 mt-4"
+      ></div>
     </header>
 
     <main>
