--- a/weapon_view.html
+++ b/weapon_view.html
@@ -38,6 +38,16 @@
     </header>
 
     <main>
+      <section id="favorites-section" class="mb-8 hidden">
+        <h2 class="text-2xl font-bold text-yellow-400 mb-4">
+          ⭐ Favorite Skins
+        </h2>
+        <div
+          id="favorites-container"
+          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-items-center"
+        ></div>
+      </section>
+
       <div class="p-4">
         <label for="tier-filter" class="mr-2 font-semibold"
           >Filter by tier :</label
