--- a/weapon_view.html
+++ b/weapon_view.html
@@ -5,6 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./dist/output.css" rel="stylesheet" />
     <title>Weapon Viewer</title>
+    <style>
+      /* Prevent horizontal scrolling */
+      html,
+      body {
+        overflow-x: hidden;
+        width: 100%;
+      }
+      #skins-container {
+        box-sizing: border-box;
+        max-width: 100%;
+      }
+      #skin-modal {
+        max-width: 100vw;
+        overflow-x: hidden;
+      }
+      #modal-content-wrapper {
+        max-width: 100%;
+        box-sizing: border-box;
+      }
+      /* Style for video play button */
+      .video-play-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 20;
+        cursor: pointer;
+        font-size: 24px;
+        color: white;
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+      }
+    </style>
   </head>
   <body class="bg-valex bg-cover bg-center text-white min-h-screen">
     <header class="p-4">
@@ -44,7 +75,7 @@
         </h2>
         <div
           id="favorites-container"
-          class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-items-center"
+          class="grid grid-cols-1 xs:grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-2"
         ></div>
       </section>
 
@@ -66,7 +97,7 @@
 
       <section
         id="skins-container"
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 p-4"
+        class="grid grid-cols-1 xs:grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 p-4"
       ></section>
     </main>
     <script type="module" src="./src/weaponviewer.js"></script>
@@ -76,13 +107,13 @@
     >
       <div
         id="modal-content-wrapper"
-        class="bg-white rounded-lg p-4 w-[90%] max-w-2xl max-h-[80vh] overflow-hidden relative transform scale-95 opacity-0 transition-all duration-200"
+        class="bg-white rounded-2xl p-4 sm:p-6 w-[95%] max-w-2xl max-h-[90vh] overflow-y-auto relative transform scale-95 opacity-0 transition-all duration-200"
       >
         <button
           id="close-modal"
           class="absolute top-2 right-2 text-gray-500 hover:text-black text-xl font-bold"
         >
-          &times;
+          ×
         </button>
 
         <div id="skin-modal-content" class="text-center">
